--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate --schema=./prisma/schema.prisma",
-    "prisma": {
-  "seed": "ts-node prisma/seed.ts"
-}
-
+    "postinstall": "prisma generate --schema=./prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
@@ -28,10 +24,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@schedule-x/calendar": "^2.36.0",
-    "@schedule-x/events-service": "^2.36.0",
-    "@schedule-x/react": "^2.36.0",
-    "@schedule-x/theme-default": "^2.36.0",
     "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,15 +42,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.10",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
-    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5.9.2"
+    "typescript": "^5"
   }
 }
