--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate --schema=./prisma/schema.prisma"
+    "postinstall": "prisma generate --schema=./prisma/schema.prisma",
+    "seed:priorities": "node scripts/seed-meeting-type-priorities.js",
+    "test:enhanced": "node scripts/test-enhanced-assignment-system.js",
+    "gen:normal": "node scripts/generate-bookings-normal.mjs",
+    "gen:urgent": "node scripts/generate-bookings-urgent.mjs",
+    "gen:balance": "node scripts/generate-bookings-balance.mjs"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
@@ -24,6 +29,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.10",
