--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.525.0",
-    "next": "15.4.3",
+    "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
