--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gen:balance": "node scripts/generate-bookings-balance.mjs"
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-react": "^4.4.0",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -43,15 +44,19 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "daypilot-pro-react": "^0.0.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
+    "moment": "^2.30.1",
     "next": "15.4.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-big-scheduler": "^0.2.7",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.0",
@@ -62,6 +67,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/classnames": "^2.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
