--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate --schema=./prisma/schema.prisma",
+    "seed": "tsx prisma/seed.ts",
     "seed:priorities": "node scripts/seed-meeting-type-priorities.js",
     "test:enhanced": "node scripts/test-enhanced-assignment-system.js",
     "test:pool-integration": "node scripts/run-pool-integration-tests.js",
@@ -29,6 +30,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -79,6 +82,7 @@
     "eslint-config-next": "15.4.3",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
