--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^4.4.0",
+    "@heroui/drawer": "^2.2.23",
+    "@heroui/system": "^2.4.22",
+    "@heroui/theme": "^2.4.22",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -69,7 +72,7 @@
     "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
     "react-resizable-panels": "^3.0.6",
-    "recharts": "^3.1.0",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
@@ -85,6 +88,7 @@
     "eslint-config-next": "15.4.3",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
