--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,39 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -p$${MYSQL_ROOT_PASSWORD} || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+  app:
+    image: node:20-slim
+    container_name: interpreter-booking-app
+    working_dir: /app
+    restart: unless-stopped
+    environment:
+      NODE_ENV: development
+      PORT: 3000
+      NEXT_TELEMETRY_DISABLED: "1"
+      # Prisma/DB connection to the mysql service
+      DATABASE_URL: mysql://booking_user:booking_password@mysql:3306/interpreter_booking
+      # Optional: enable reliable file watching inside containers on Windows/Mac
+      CHOKIDAR_USEPOLLING: "true"
+      WATCHPACK_POLLING: "true"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./:/app
+      - node_modules:/app/node_modules
+      - next_cache:/app/.next
+    command: >-
+      sh -c "npm ci || npm install && npx prisma migrate deploy && npm run dev"
 
 volumes:
   mysql_data:
+  node_modules:
+  next_cache:
