--- a/package.json
+++ b/package.json
@@ -94,5 +94,8 @@
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
