--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,33 +25,20 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: devbase
-    container_name: interpreter-booking-app
-    working_dir: /app
+    image: interpreter-booking:prod
+    container_name: interpreter-booking-web
     restart: unless-stopped
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
       PORT: 3000
       NEXT_TELEMETRY_DISABLED: "1"
-      # Prisma/DB connection to the db service inside the network
       DATABASE_URL: mysql://booking_user:booking_password@db:3306/interpreter_booking
-      # Reliable file watching inside containers on Windows/Mac
-      CHOKIDAR_USEPOLLING: "true"
-      WATCHPACK_POLLING: "true"
-      CHOKIDAR_INTERVAL: "200"
     depends_on:
       db:
         condition: service_healthy
     ports:
       - "3000:3000"
-    volumes:
-      - ./:/app
-      - node_modules:/app/node_modules
-      - next_cache:/app/.next
-    command: >-
-      sh -c "(npm ci || npm install) && npx prisma migrate deploy && npm run dev"
 
 volumes:
   db_data:
-  node_modules:
-  next_cache:
+
