--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "prisma": "^6.13.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -88,7 +89,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
-    "prisma": "^6.13.0",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.5",
