--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@heroui/drawer": "^2.2.23",
     "@heroui/system": "^2.4.22",
     "@heroui/theme": "^2.4.22",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.16.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -69,6 +69,7 @@
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
+    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
@@ -76,8 +77,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.17",
-    "prisma": "^6.13.0"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
