--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,26 +1,6 @@
 version: "3.8"
 
 services:
-  db:
-    image: mysql:8.0
-    container_name: interpreter-booking-mysql
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: interpreter_booking
-      MYSQL_USER: booking_user
-      MYSQL_PASSWORD: booking_password
-    ports:
-      - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$${MYSQL_ROOT_PASSWORD} || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-
   web:
     build:
       context: .
@@ -30,9 +10,9 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: production
-      PORT: 3000
+      PORT: 3030
       NEXT_TELEMETRY_DISABLED: "1"
-      DATABASE_URL: "mysql://STGOGK:P%40ssw0rd@172.31.150.22:3306/booking_interpreter"
+      DATABASE_URL: "mysql://STG:P@ssw0rd@172.31.150.22:3306/booking_interpreter"
       ENABLE_ROOM_BOOKING: "0"
       ENABLE_FORWARD_USER: "0"
       ENABLE_FORWARD_ADMIN: "0"
@@ -45,12 +25,7 @@ services:
       SMTP_FROM_NAME: "DEDE_SYSTEM"
       EMAIL_DOMAIN: "dit.daikin.co.jp"
       ORGANIZATION_NAME: "Daikin"
-    depends_on:
-      db:
-        condition: service_healthy
+      
     ports:
-      - "3000:3000"
-
-volumes:
-  db_data:
+      - "3030:3030"
 
