docs: Add repository guidelines and agent-specific instructions
- Created AGENTS.md and .cursor/rules/agents.mdc to outline project structure, coding style, testing guidelines, and commit practices.
- Updated package.json and package-lock.json to include new dependencies for modal functionality.
- Enhanced LoginForm and BookingCalendar components with new UI elements and tutorial modals.
- Minor adjustments to existing components for improved layout and user experience.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^4.4.0",
     "@heroui/drawer": "^2.2.23",
+    "@heroui/modal": "^2.2.24",
     "@heroui/system": "^2.4.22",
     "@heroui/theme": "^2.4.22",
     "@prisma/client": "^6.16.3",
