--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^4.4.0",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/resource-timegrid": "^6.1.19",
     "@heroui/drawer": "^2.2.23",
     "@heroui/modal": "^2.2.24",
     "@heroui/system": "^2.4.22",
@@ -74,6 +76,7 @@
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "fullcalendar": "^6.1.19",
     "lucide-react": "^0.525.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
