--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.24",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
@@ -83,10 +84,10 @@
     "react-dom": "19.1.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
+    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.17",
-    "sharp": "^0.34.4"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
