Enable room booking feature and update related components
- Updated `docker-compose.prod.yml` to enable room booking by setting `ENABLE_ROOM_BOOKING` to "1" and added volume for room images.
- Introduced a new implementation plan for room booking in `Room-Booking-Implement.md`, detailing goals, schema changes, API endpoints, and testing strategies.
- Enhanced the room management section in the admin page to include a new `isBookable` property for rooms.
- Created a dedicated API endpoint for room bookings, ensuring strong validation and conflict checks.
- Added functionality to cancel room bookings and retrieve booking details, including owner information.
- Updated various components and API routes to support the new room booking feature, including handling booking types and ensuring proper filtering in the booking history.

This commit lays the groundwork for a robust room booking system, leveraging existing infrastructure while ensuring minimal disruption to current functionalities.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,7 +22,7 @@ services:
       NEXT_PUBLIC_ENABLE_FORWARD_USER: "0"
       NEXT_PUBLIC_ENABLE_FORWARD_ADMIN: "0"
 
-      ENABLE_ROOM_BOOKING: "0"
+      ENABLE_ROOM_BOOKING: "1"
       ENABLE_FORWARD_USER: "0"
       ENABLE_FORWARD_ADMIN: "0"
 
@@ -42,6 +42,8 @@ services:
       
     ports:
       - "3030:3030"
+    volumes:
+      - room_images:/app/public/Room
 
   db:
     image: mysql:8.0
@@ -65,3 +67,4 @@ services:
 
 volumes:
   db_data:
+  room_images:
